# ringo

./: .gitignore  Cargo.toml  README.md
db/: create.sql  ringo.sqlite
docker/: Dockerfile
ringo-frontend/: .eslintrc.cjs  .prettierrc.json  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
ringo-frontend/src/: App.vue
ringo-frontend/src/assets/: base.css  main.scss
ringo-frontend/src/components/: BingoBoard.vue  BingoField.vue  Header.vue  PlayerList.vue
ringo-frontend/src/router/: index.ts
ringo-frontend/src/stores/: counter.ts  game.ts  theme.ts
ringo-frontend/src/views/: HomeView.vue  RoomView.vue  StartView.vue
spec/: ringo.json
src/: create.sql  main.rs  queries.rs  user.rs
src/queries/: get_signing_key.sql  room_code_exists.sql  set_signing_key.sql
