[package]
name = "ringo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
ws = { package = "rocket_ws", version = "0.1.0" }
rand = "0.8.5"
rusqlite = "0.30.0"
jwt = "0.16.0"
serde = {  version = "1.0.193", features = ["default", "derive"] }
serde_json = "1.0.108"
base64 = "0.21.5"
async-trait = "0.1.75"
hmac = "0.12.1"
sha2 = "0.10.8"